--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# this is so we can see what happens during startup. NOT FOR PRODUCTION CODE!!
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 
+# this is so hibernate doesn't remove our data and schema during startup
+spring.jpa.hibernate.ddl-auto=none 
